# ssh-wrapper

./: .gitignore  Dockerfile  README.md  justfile  main.go  pyproject.toml  test-compose.yaml
.github/: dependabot.yml
.github/workflows/: docker.yml  e2e.yml  test-on-pr.yml  test-on-push.yml
e2e/: run-e2e.sh  test_e2e.py
lib/files/: files_test.go
test-data/: config.yaml  docker-entrypoint.sh
