[project]
name = "ssh-wrapper"
version = "0.1.0"
description = "python only use for e2e test for this project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
unfixable = []
per-file-ignores = {}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
